kube/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    name: cop-data-api-spec-service
  name: cop-data-api-spec-service
spec:
  ports:
  - name: https
    port: 443
    targetPort: 10443
  selector:
    name: cop-data-api-spec
